--- a/00-Intro-GIT-HTML-CSS/homework/homework.html
+++ b/00-Intro-GIT-HTML-CSS/homework/homework.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Tarea HTML de José Abel</title>
        <!--- <style>
            h1{color:darkgreen;}
            img{width: 400px;}
@@ -13,7 +14,7 @@
            #spanId{font-size: 25px;
                    margin: 50px;}          
         </style>-->
-        <link rel="stylesheet" href="./styles.css"
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <div class="divClass">
